<resources>
    <string name="app_name">DroidFleetID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Интервал</string>
    <string name="login_hint">Логин:</string>
    <string name="authorization_button">Авторизоваться</string>
    <string name="password_hint">Пароль:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="devices">Устройства</string>
    <string name="map">Карта</string>
    <string name="reports">Отчеты</string>
    <string name="settings">Настройки</string>
    <string name="speed">speed</string>
    <string name="real_speed">Speed</string>
    <string name="network_settings">Настройки подключения</string>
    <string name="account">Учетная запись</string>
    <string name="map_settings">Настройки карты</string>
    <string name="exit_button">exit_button</string>
    <string name="begin">24.10.95</string>
    <string name="end">24.10.95</string>
</resources>